--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -60,6 +65,7 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <argLine>--add-opens java.base/java.time=ALL-UNNAMED</argLine>
                         </configuration>
                     </execution>
                 </executions>
